syntax = "proto3";

option csharp_namespace = "FoodDash.Shared.Grpc";

package orders;

// Order Service
service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (OrderResponse);
  rpc GetOrdersByRestaurant (GetOrdersByRestaurantRequest) returns (OrderListResponse);
  rpc GetOrdersByCustomer (GetOrdersByCustomerRequest) returns (OrderListResponse);
  rpc AssignDeliveryPartner (AssignDeliveryPartnerRequest) returns (OrderResponse);
}

// Messages
message CreateOrderRequest {
  int32 customer_id = 1;
  int32 restaurant_id = 2;
  string delivery_address = 3;
  string delivery_instructions = 4;
  string payment_method = 5;
  string coupon_code = 6;
  repeated OrderItemRequest order_items = 7;
}

message OrderItemRequest {
  int32 menu_item_id = 1;
  int32 quantity = 2;
  string special_instructions = 3;
}

message GetOrderRequest {
  int32 order_id = 1;
}

message UpdateOrderStatusRequest {
  int32 order_id = 1;
  string status = 2;
  int32 user_id = 3;
  string user_role = 4;
}

message GetOrdersByRestaurantRequest {
  int32 restaurant_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetOrdersByCustomerRequest {
  int32 customer_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message AssignDeliveryPartnerRequest {
  int32 order_id = 1;
  int32 delivery_partner_id = 2;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
  OrderData order = 3;
}

message OrderListResponse {
  bool success = 1;
  string message = 2;
  repeated OrderData orders = 3;
  int32 total_count = 4;
}

message OrderData {
  int32 id = 1;
  string order_number = 2;
  int32 customer_id = 3;
  string customer_name = 4;
  int32 restaurant_id = 5;
  string restaurant_name = 6;
  int32 delivery_partner_id = 7;
  string delivery_partner_name = 8;
  string status = 9;
  string delivery_address = 10;
  double total_amount = 11;
  string payment_method = 12;
  bool is_paid = 13;
  string created_at = 14;
  repeated OrderItemData order_items = 15;
}

message OrderItemData {
  int32 id = 1;
  int32 menu_item_id = 2;
  string menu_item_name = 3;
  int32 quantity = 4;
  double unit_price = 5;
  double total_price = 6;
  string special_instructions = 7;
}